examples/service_external_name.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: business-api

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-in-other-namespace
  namespace: business-api
spec:
  type: ExternalName
  externalName: mysql.mysql.svc.cluster.local
