examples/service_without_pods.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: business-api

---

apiVersion: v1
kind: Service
metadata:
  name: business-api2
  namespace: business-api
spec:
  selector:
    app.kubernetes.io/name: nonexistent
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
