examples/statefulset_mysql.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql

---

# Headless service for stable DNS entries of StatefulSet members.
apiVersion: v1
kind: Service
metadata:
  name: mysql-master
  namespace: mysql
  labels:
    app: mysql
    app.kubernetes.io/name: mysql
spec:
  ports:
  - name: mysql
    port: 3306
  clusterIP: None
  selector:
    app: mysql
---
# Client service for connecting to any MySQL instance for reads.
# For writes, you must instead connect to the primary: mysql-0.mysql.
apiVersion: v1
kind: Service
metadata:
  name: mysql-read
  namespace: mysql
  labels:
    app: mysql
    app.kubernetes.io/name: mysql
    readonly: "true"
spec:
  ports:
  - name: mysql
    port: 3306
  selector:
    app: mysql

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: mysql
  labels:
    "app.kubernetes.io/name": mysql
    "app.kubernetes.io/version": "8.0.40-oracle"
spec:
  selector:
    matchLabels:
      app: mysql
      app.kubernetes.io/name: mysql
  serviceName: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
        app.kubernetes.io/name: mysql
    spec:
      containers:
      - name: mysql
        image: arm64v8/mysql:8.0.40-oracle
        ports:
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
          subPath: mysql
        - name: conf
          mountPath: /etc/mysql/conf.d
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
        livenessProbe:
          exec:
            command: ["mysqladmin", "ping"]
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            # Check we can execute queries over TCP (skip-networking is off).
            command: ["mysql", "-h", "127.0.0.1", "-e", "SELECT 1"]
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
      # - name: xtrabackup
      #   image: gcr.io/google-samples/xtrabackup:1.0
      #   ports:
      #   - name: xtrabackup
      #     containerPort: 3307
      #   command:
      #   - bash
      #   - "-c"
      #   - |
      #     set -ex
      #     cd /var/lib/mysql

      #     # Determine binlog position of cloned data, if any.
      #     if [[ -f xtrabackup_slave_info && "x$(<xtrabackup_slave_info)" != "x" ]]; then
      #       # XtraBackup already generated a partial "CHANGE MASTER TO" query
      #       # because we're cloning from an existing replica. (Need to remove the tailing semicolon!)
      #       cat xtrabackup_slave_info | sed -E 's/;$//g' > change_master_to.sql.in
      #       # Ignore xtrabackup_binlog_info in this case (it's useless).
      #       rm -f xtrabackup_slave_info xtrabackup_binlog_info
      #     elif [[ -f xtrabackup_binlog_info ]]; then
      #       # We're cloning directly from primary. Parse binlog position.
      #       [[ `cat xtrabackup_binlog_info` =~ ^(.*?)[[:space:]]+(.*?)$ ]] || exit 1
      #       rm -f xtrabackup_binlog_info xtrabackup_slave_info
      #       echo "CHANGE MASTER TO MASTER_LOG_FILE='${BASH_REMATCH[1]}',\
      #             MASTER_LOG_POS=${BASH_REMATCH[2]}" > change_master_to.sql.in
      #     fi

      #     # Check if we need to complete a clone by starting replication.
      #     if [[ -f change_master_to.sql.in ]]; then
      #       echo "Waiting for mysqld to be ready (accepting connections)"
      #       until mysql -h 127.0.0.1 -e "SELECT 1"; do sleep 1; done

      #       echo "Initializing replication from clone position"
      #       mysql -h 127.0.0.1 \
      #             -e "$(<change_master_to.sql.in), \
      #                     MASTER_HOST='mysql-0.mysql', \
      #                     MASTER_USER='root', \
      #                     MASTER_PASSWORD='', \
      #                     MASTER_CONNECT_RETRY=10; \
      #                   START SLAVE;" || exit 1
      #       # In case of container restart, attempt this at-most-once.
      #       mv change_master_to.sql.in change_master_to.sql.orig
      #     fi

      #     # Start a server to send backups when requested by peers.
      #     exec ncat --listen --keep-open --send-only --max-conns=1 3307 -c \
      #       "xtrabackup --backup --slave-info --stream=xbstream --host=127.0.0.1 --user=root"          
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
          subPath: mysql
        - name: conf
          mountPath: /etc/mysql/conf.d
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
      volumes:
      - name: conf
        emptyDir: {}
      - name: config-map
        configMap:
          name: mysql
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
