examples/svc_without_pods.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app.kubernetes.io/name: proxy
  ports:
  - name: test
    protocol: TCP
    port: 80
    targetPort: test
