examples/ingress_default_backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-default-backend
spec:
  defaultBackend:
    service:
      name: test
      port:
        number: 80
